# estrutura_projetos_crewai

./: .env  .gitignore  README.md  pyproject.toml  report.md
src/estrutura_projetos_crewai/: crew.py  main.py
src/estrutura_projetos_crewai/config/: agents.yaml  tasks.yaml
