[project]
name = "estrutura_projetos_crewai"
version = "0.1.0"
description = "estrutura_projetos_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
estrutura_projetos_crewai = "estrutura_projetos_crewai.main:run"
run_crew = "estrutura_projetos_crewai.main:run"
train = "estrutura_projetos_crewai.main:train"
replay = "estrutura_projetos_crewai.main:replay"
test = "estrutura_projetos_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
